user now can have multiple roles

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -172,6 +172,7 @@ de:
       editor: Bildungsreferent*in
       layouter: Layouter*in
       user: Benutzer*in
+      cms_admin: CMS-Administrator*in
   delete: Löschen
   edit: Bearbeiten
   copy: Kopieren
