--- a/config/locales/de/simple_form.yml
+++ b/config/locales/de/simple_form.yml
@@ -90,15 +90,20 @@ de:
         number: 'Nummer'
         title: 'Bezeichnung der Maßnahme'
         section: 'Fachgebiet'
+        topic: 'Thema'
         type: 'Art der BV'
+        event_type: 'Veranstaltungsart'
+        law_accepted: 'Anerkennung nach dem Bildungsfreistellungsgesetz'
         published: 'Ankündigung'
         location: 'Ort der Durchführung'
+        zip: 'Postleitzahl'
         start_date: 'Beginn (Datum)'
         start_time: 'Beginn (Zeit)'
         end_date: 'Ende (Datum)'
         end_time: 'Ende (Zeit)'
-        hours: 'Ustd.'
-        partner: 'Partner'
+        hours: 'Unterichtsstunden'
+        partner: 'Kooperation'
+        ebg: 'EBG'
         certificate: 'Bildungsabschluss'
         target_group: 'Zielgruppe'
         not_local: 'nicht aus Sachsen-Anhalt'
