add data protection acceptance on seminar booking form

--- a/config/locales/de/views.yml
+++ b/config/locales/de/views.yml
@@ -83,5 +83,9 @@ de:
       member: Mitglied im PARITÄTISCHEN LSA
       member_institution: Einrichtung des PARITÄTISCHEN LSA
       graduate: Absolvent*in der Fachschule
-      terms_of_service: 'Hiermit erkenne ich die Allgemeinen Geschäftsbedingungen des PARITÄTISCHEN Bildungswerkes LSA an.'
+      terms_of_service: 'Hiermit erkenne ich die
+          <a href="/agbs" target="_blank">Allgemeinen Geschäftsbedingungen</a>
+          des PARITÄTISCHEN Bildungswerkes LSA an.'
+      data_protection: 'Hiermit bestätige ich, die Informationen zur <a href="/datenschutz" target="_blank">Erhebung
+          meiner personenbezogenen Daten nach § 13 DSGVO</a> zur Kenntnis genommen zu haben.'
       school: Schule
