data info and terms of service update

--- a/config/locales/de/views.yml
+++ b/config/locales/de/views.yml
@@ -86,6 +86,6 @@ de:
       terms_of_service: 'Hiermit erkenne ich die
           <a href="/agbs" target="_blank">Allgemeinen Geschäftsbedingungen</a>
           des PARITÄTISCHEN Bildungswerkes LSA an.'
-      data_protection: 'Hiermit bestätige ich, die Informationen zur <a href="/datenschutz" target="_blank">Erhebung
+      data_protection: 'Hiermit bestätige ich, die Informationen zur <a href="/daten" target="_blank">Erhebung
           meiner personenbezogenen Daten nach § 13 DSGVO</a> zur Kenntnis genommen zu haben.'
       school: Schule
