move statistics into a proper model

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -132,7 +132,7 @@ de:
         year: Jahr
         events: Termine
         price_text: Gebühr
-        statistic: PRAS
+        legal_statistic: PRAS
         editor: Bildungsreferent*in
         external_booking_address: Externe Buchung über
         printed_pages: Seiten im Bildungskalender
