reductions: additional fields

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -24,6 +24,12 @@ de:
     schools:
       - Aschersleben
       - Drübeck
+    reductions:
+      pari: PARITÄTER
+      group: Gruppenrabatt
+      early: Frühbucher
+      tandem: Tandem
+      school: Schüler*innen
   buchung:
     company_true: Firmenanmeldung
     company_false: Privat
